# debate-gpt

./: .coverage  .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  PROGRESS.md  README.md  alembic.ini  dry_run.py  pyproject.toml  requirements.txt  run_api.py  run_cli.py
.claude/: settings.json
.claude/agents/: bug-hunter.md
.claude/skills/api-contract-verify/: SKILL.md
.claude/skills/sprint-scope-guard/: SKILL.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: DebateForm.jsx  JudgeScorecard.jsx  RoundCard.jsx  SessionSidebar.jsx  VerdictBanner.jsx
frontend/src/hooks/: useDebateStream.js
frontend/src/pages/: DebatePage.jsx  HomePage.jsx
migrations/: env.py
migrations/versions/: 0001_init.py
src/debate_gpt/: __init__.py  __main__.py  agents.py  api.py  config.py  db.py  graph.py  prompts.py  redis_stream.py  runtime.py  schemas.py  state.py  verdict.py
src/debate_gpt/observability/: __init__.py  health.py  logging.py  middleware.py
tests/: conftest.py  manual_day3.md  manual_day4.md
tests/evals/: __init__.py
tests/integration/: test_debate_api.py  test_delete_debate.py  test_health.py  test_sse_stream.py
tests/unit/: test_debate_state.py  test_judge_schema.py  test_prompts.py  test_redis_stream.py  test_score_aggregation.py  test_session_utils.py
